@@ -208,12 +208,12 @@ do
             eval ip6="\"\$ip6_${iface_x}\""
 
             # drop all outgoing packets which don't have us as a source
-            $iptables  -A OUTPUT -o $iface --source ! "$ip"  -j DROP
-            $ip6tables -A OUTPUT -o $iface --source ! "$ip6" -j DROP
+            $iptables  -A OUTPUT -o $iface ! --source "$ip"  -j DROP
+            $ip6tables -A OUTPUT -o $iface ! --source "$ip6" -j DROP
 
             # drop all incoming packets which don't have us as destination
-            $iptables  -A INPUT -i $iface --destination ! "$ip"  -j DROP
-            $ip6tables -A INPUT -i $iface --destination ! "$ip6" -j DROP
+            $iptables  -A INPUT -i $iface ! --destination "$ip"  -j DROP
+            $ip6tables -A INPUT -i $iface ! --destination "$ip6" -j DROP
 
             # NOTE: this is stricter than above no_route_ip rule.  If this
             # rule is used, above rule ``$iptables -A INPUT -i $iface
